# AoC22

./: CMakeLists.txt
1/: CMakeLists.txt  Part1.cpp  Part2.cpp
10/: CMakeLists.txt  main.cpp  test.cpp  tube.cpp  tube.h
12/: CMakeLists.txt  Part1.cpp
13/: CMakeLists.txt  Part1.cpp  example
2/: CMakeLists.txt  Part1.cpp  Part2.cpp
3/: CMakeLists.txt  Part1.cpp  Part2.cpp
4/: CMakeLists.txt  Part1.cpp
5/: CMakeLists.txt  Part1.cpp
6/: CMakeLists.txt  Part1.cpp
7/: CMakeLists.txt  Part1.cpp
8/: CMakeLists.txt  Part1.cpp
9/: CMakeLists.txt  main.cpp  rope.cpp  rope.h  test.cpp
lib/: CMakeLists.txt  input.cpp  input.h  lib.cpp  lib.h
